Finalização do projeto

--- a/style.css
+++ b/style.css
@@ -21,4 +21,64 @@
 
 body {
     font-family: "Inknut Antiqua", sans-serif;
+    background-image: url(./img/images.jpg);
+    background-size: 410px;
+}
+
+/* Cabeçalho */
+
+header img {
+    width: 100px;
+    height: 100px;
+    margin-top: 18px;
+    border-radius: 50%;
+}
+
+/* principal */
+
+main {
+    text-align: center;
+}
+
+main h1 {
+    margin: 6px 0px;
+    font-size: 1.25rem;
+    font-weight: 650;
+    color: var(--cinzaclaro);
+
+}
+
+main p {
+    max-width: 325px;
+    margin-bottom: 20px;
+    font-weight: 400;
+    font-size: 1rem;
+    color: var(--branco);
+}
+
+/* Links */
+#links {
+    display: flex;
+    flex-direction: column;
+}
+
+.container > a {
+    text-decoration: none;
+    background-color: rgb(255, 255, 255);
+    color: #000000;
+    width: 310px;
+    height: 60px;
+    margin-bottom: 10px;
+    text-align: center;
+    padding-top: 10px;
+    border-radius: 50px;
+}
+
+/* Rodapé */
+footer {
+    margin-top: 15px;
+}
+
+footer img {
+    margin: 0px 10px;
 }
